--- a/src/ru/tema/SettingLikes.fxml
+++ b/src/ru/tema/SettingLikes.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="anchorpane" prefHeight="205.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.tema.SettingLikesController">
+<AnchorPane fx:id="anchorpane" prefHeight="205.0" prefWidth="490.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.tema.SettingLikesController">
     <children>
         <ProgressBar fx:id="progressbar" layoutX="15.0" layoutY="171.0" prefHeight="20.0" prefWidth="450.0" progress="0.0" />
         <TextField fx:id="textfield" layoutX="15.0" layoutY="62.0" prefHeight="26.0" prefWidth="450.0" />
@@ -14,7 +14,7 @@
         <Label fx:id="groupnamelabel" alignment="CENTER" layoutX="16.0" layoutY="95.0" prefHeight="16.0" prefWidth="450.0" text="Название группы" />
       <Label fx:id="progresslabel" alignment="CENTER" layoutX="15.0" layoutY="149.0" prefHeight="16.0" prefWidth="450.0" text="Осталось столько-то времени" />
       <Label fx:id="likeschangerlabel" alignment="CENTER" layoutX="9.0" layoutY="126.0" prefHeight="16.0" prefWidth="450.0" text="Было поставленно 2 новых лайка после обновления!" />
-      <MenuBar fx:id="menuBar" layoutY="2.0" prefHeight="26.0" prefWidth="480.0">
+      <MenuBar fx:id="menuBar" prefHeight="26.0" prefWidth="490.0">
         
       </MenuBar>
     </children>
